--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -1004,10 +1004,6 @@ h1:after {
     -webkit-transform: scale(0.9);
     transform: scale(0.9);
   }
-  .x5 {
-    -webkit-transform: scale(0.5);
-    transform: scale(0.5);
-  }
   .x6 {
     -webkit-transform: scale(0.8);
     transform: scale(0.8);
@@ -1016,17 +1012,18 @@ h1:after {
     -webkit-transform: scale(0.7);
     transform: scale(0.7);
   }
-  .x8 {
-    -webkit-transform: scale(0.9);
-    transform: scale(0.9);
-  }
   .x9 {
     -webkit-transform: scale(0.6);
     transform: scale(0.6);
   }
+  .x5,
+  .x8,
+  .x4,
   .x10 {
-    -webkit-transform: scale(0.8);
-    transform: scale(0.8);
+    display: none;
+  }
+  .note {
+    display: none;
   }
 }
 
@@ -1052,9 +1049,6 @@ h1:after {
   }
   footer {
     width: 80%;
-  }
-  .note {
-    display: none;
   }
 }
 
